--- a/src/global.less
+++ b/src/global.less
@@ -492,7 +492,7 @@ body {
   scrollbar-shadow-color: rgba(209, 213, 219, 1); /**/
   scrollbar-darkshadow-color: rgba(209, 213, 219, 1); /**/
   scrollbar-track-color: rgba(209, 213, 219, 1); /**/
-  scrollbar-base-color: rgba(244, 245, 249, 1) /**/ / 三角箭头的颜色
+  scrollbar-base-color: rgba(244, 245, 249, 1) /**/
     //*立体滚动条的颜色*//*立体滚动条亮边的颜色*//*滚动条空白部分的颜色*//*立体滚动条阴影的颜色*//*立体滚动条强阴影的颜色*//*立体滚动条背景颜色*//*滚动条的基本颜色*/
 ;
 }
